# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: _home_sitruuna__cache_pypoetry_virtualenvs_maksukortti-e2Vf8Jc2-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_sitruuna__cache_pypoetry_virtualenvs_maksukortti-e2Vf8Jc2-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_sitruuna__cache_pypoetry_virtualenvs_maksukortti-e2Vf8Jc2-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_sitruuna__cache_pypoetry_virtualenvs_maksukortti-e2Vf8Jc2-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  (+97 more)
src/: cheese.py  database_connection.py  floor.py  game_loop.py  index.py  initialize_database.py  lab.py  load_image.py  rat.py  renderer.py  trap.py  wall.py
src/components/: cheese.py  floor.py  rat.py  trap.py  wall.py
src/logic/: event_handler.py  event_queue.py  game.py  lab.py  lab_design.py
src/repositories/: lab_repository.py
src/tests/: game_loop_test.py  lab_test.py
src/tests/logic/: game_test.py  lab_design_test.py  lab_test.py
src/tests/repositories/: lab_repository_test.py
src/ui/: game.py  game_loop.py  game_over_menu.py  lab.py  lab_designer.py  lab_selection_menu.py  lab_size_menu.py  main_menu.py  menu.py  renderer.py
(+3 files in other folders)
